--- a/SCATTER PLOT/ScatterPlotExample.ipynb
+++ b/SCATTER PLOT/ScatterPlotExample.ipynb
@@ -255,7 +255,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Zaman zaman bir dağılım grafiğinde iki özelliği x ve y eksenlerinde gösterirken üçüncü özelliğide renk veya büyüklük olarak göstermek isteriz.Aşağıda bunun için kullanacağımız örnekte sklearn paketinde yer alan örnek veri kümelerinden Boston ev fiyatları veri setini kullanacağız.Bu veri setinde bulunan verilerden ortalama ev başına oda sayısını x ekseninde ve ortalama fiyatı da y ekseninde gösterirken şehirdeki suç oranını da büyüklük olarak yansıtacağız.\n",
+    "From time to time, we want to show two properties on the x and y axes in a scatterplot, while we want to show the third property as color or size. In the example we will use for this below, we will use the Boston house prices dataset from the sample datasets in the sklearn package. While showing the average price on the x-axis and the average price on the y-axis, we will reflect the crime rate in the city as size.\n",
     "We will use the sklearn.datasets package to get the dataset, the pandas package to make it available for plotting, and the matplotlib.pyplot packages for plotting."
    ],
    "metadata": {
@@ -346,11 +346,25 @@
   },
   {
    "cell_type": "markdown",
-   "source": [],
+   "source": [
+    "As seen in the graphic above, the crime rates in each city are reflected in the size of the figure. We do this with the s, that is, 'size' argument in the plt.scatter() function."
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
    }
   }
