--- a/SCATTER PLOT/ScatterPlotExample.ipynb
+++ b/SCATTER PLOT/ScatterPlotExample.ipynb
@@ -407,6 +407,18 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "From the graph, it can be seen that there is a high and positive correlation between petal length and petal width. It is also seen that iris species in different groups are clustered in different areas. As a result, the type of this flower can be predicted with the width and height information."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
