Two-Variable Graphs

--- a/TWO-VARIABLE GRAPHS/TwoVariableGraphsExample.ipynb
+++ b/TWO-VARIABLE GRAPHS/TwoVariableGraphsExample.ipynb
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "outputs": [
     {
      "data": {
@@ -215,7 +215,7 @@
    ],
    "source": [
     "plt.contour(X,Y,Z,20)\n",
-    "plt.xlabel('Contour Chart',)\n",
+    "plt.xlabel('Contour Chart')\n",
     "plt.show()"
    ],
    "metadata": {
