Two Variable Graph

--- a/TWO-VARIABLE GRAPHS/TwoVariableGraphsExample.ipynb
+++ b/TWO-VARIABLE GRAPHS/TwoVariableGraphsExample.ipynb
@@ -84,7 +84,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Let's calculate the Z variable by using the X and Y variables in the above equation. Pay attention to the Numpy functions we use. Let's use the np.hypot(X,Y) function instead of the np.sqrt(X**2 + Y**2) function in the equation."
+    "Let's calculate the Z variable by using the X and Y variables in the above equation. Pay attention to the Numpy functions we use. Let's use the np.hypot(X,Y) function instead of the np.sqrt($X^2$ + $Y^2$) function in the equation."
    ],
    "metadata": {
     "collapsed": false,
